[project]
name = "check-imei-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "paddington22", email = "pkorolev23@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.7",
    "pydantic>=2.10.6",
    "uvicorn>=0.34.0",
    "requests>=2.32.3",
    "pydantic-settings>=2.7.1",
    "python-telegram-bot>=21.10",
    "tortoise>=0.1.1",
    "aerich>=0.8.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/check_imei_bot"]
